<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reviewableItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">


    <TextView
        android:id="@+id/reviewableId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_sans"
        android:gravity="center_vertical"
        android:padding="14dp"
        android:textAppearance="?attr/textAppearanceListItem" />

    <FrameLayout
        android:id="@+id/gradeLayout"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:paddingTop="5dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/reviewableGrade"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </FrameLayout>

</androidx.cardview.widget.CardView>