<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/changeMapType"
        android:title="@string/change_map_type"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/hybridType"
                android:title="@string/hybrid_type" />
            <item
                android:id="@+id/satelliteType"
                android:title="@string/satellite_type" />
            <item
                android:id="@+id/standardType"
                android:title="@string/standard_type" />
            <item
                android:id="@+id/terrainType"
                android:title="@string/terrain_type" />
        </menu>
    </item>
</menu>