<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    app:startDestination="@id/mapFragment">

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.github.sdp.ratemyepfl.ui.fragment.main.MapFragment"
        android:label="@string/map_nav_title"
        tools:layout="@layout/fragment_map" />
</navigation>